src/cat.output
状态 19 conflicts: 1 shift/reduce
状态 84 conflicts: 13 shift/reduce
状态 85 conflicts: 12 shift/reduce
状态 11 conflicts: 12 shift/reduce
状态 119 conflicts: 12 shift/reduce
状态 129 conflicts: 12 shift/reduce


语法

    0 $accept: code "end of file"

    1 code: %empty
    2     | exp

    3 exp: lvalue
    4    | funcall
    5    | lvalue ":=" exp
    6    | "nil"
    7    | seq
    8    | "integer"
    9    | "string"
   10    | exp "+" exp
   11    | exp "-" exp
   12    | exp "*" exp
   13    | exp "/" exp
   14    | exp "=" exp
   15    | exp "<>" exp
   16    | exp "<" exp
   17    | exp "<=" exp
   18    | exp ">" exp
   19    | exp ">=" exp
   20    | exp "&" exp
   21    | exp "|" exp
   22    | "-" exp
   23    | record
   24    | array
   25    | "if" exp "then" exp "else" exp
   26    | "if" exp "then" exp
   27    | "while" exp "do" exp
   28    | "for" id ":=" exp "to" exp "do" exp
   29    | "break"
   30    | "let" decs "in" explist "end"

   31 seq: "(" explist ")"

   32 record: id "{" refields "}"

   33 refields: id "=" exp "," refields
   34         | id "=" exp
   35         | %empty

   36 array: id "[" exp "]" "of" exp

   37 decs: dec decs
   38     | %empty

   39 dec: tydec
   40    | vardec
   41    | fundec

   42 tydec: "type" id "=" ty

   43 ty: id
   44   | "{" typefields "}"
   45   | "array" "of" id

   46 typefields: id ":" id "," typefields
   47           | id ":" id
   48           | %empty

   49 vardec: "var" id ":=" exp
   50       | "var" id ":" id ":=" exp

   51 fundec: "function" id "(" typefields ")" "=" exp
   52       | "function" id "(" typefields ")" ":" id "=" exp

   53 explist: exp ";" explist
   54        | exp
   55        | %empty

   56 lvalue: id
   57       | lvalue "." id
   58       | lvalue "[" exp "]"

   59 funcall: id "(" args ")"

   60 args: exp "," args
   61     | exp
   62     | %empty

   63 id: "identifier"


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"," (258) 33 46 60
":" (259) 46 47 50 52
";" (260) 53
"(" (261) 31 51 52 59
")" (262) 31 51 52 59
"[" (263) 36 58
"]" (264) 36 58
"{" (265) 32 44
"}" (266) 32 44
"." (267) 57
"+" (268) 10
"-" (269) 11 22
"*" (270) 12
"/" (271) 13
"=" (272) 14 33 34 42 51 52
"<>" (273) 15
"<" (274) 16
"<=" (275) 17
">" (276) 18
">=" (277) 19
"&" (278) 20
"|" (279) 21
":=" (280) 5 28 49 50
"array" (281) 45
"if" (282) 25 26
"then" (283) 25 26
"else" (284) 25
"while" (285) 27
"for" (286) 28
"to" (287) 28
"do" (288) 27 28
"let" (289) 30
"in" (290) 30
"end" (291) 30
"of" (292) 36 45
"break" (293) 29
"function" (294) 51 52
"var" (295) 49 50
"type" (296) 42
"nil" (297) 6
"identifier" (298) 63
"string" (299) 9
"integer" (300) 8
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
code (48)
    on left: 1 2, on right: 0
exp (49)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30, on right: 2 5 10 11 12 13 14 15 16 17 18
    19 20 21 22 25 26 27 28 33 34 36 49 50 51 52 53 54 58 60 61
seq (50)
    on left: 31, on right: 7
record (51)
    on left: 32, on right: 23
refields (52)
    on left: 33 34 35, on right: 32 33
array (53)
    on left: 36, on right: 24
decs (54)
    on left: 37 38, on right: 30 37
dec (55)
    on left: 39 40 41, on right: 37
tydec (56)
    on left: 42, on right: 39
ty (57)
    on left: 43 44 45, on right: 42
typefields (58)
    on left: 46 47 48, on right: 44 46 51 52
vardec (59)
    on left: 49 50, on right: 40
fundec (60)
    on left: 51 52, on right: 41
explist (61)
    on left: 53 54 55, on right: 30 31 53
lvalue (62)
    on left: 56 57 58, on right: 3 5 57 58
funcall (63)
    on left: 59, on right: 4
args (64)
    on left: 60 61 62, on right: 59 60
id (65)
    on left: 63, on right: 28 32 33 34 36 42 43 45 46 47 49 50 51 52
    56 57 59


State 0

    0 $accept: . code "end of file"

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    $default  reduce using rule 1 (code)

    code     转到状态 12
    exp      转到状态 13
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 1

   31 seq: "(" . explist ")"

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    $default  reduce using rule 55 (explist)

    exp      转到状态 20
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    explist  转到状态 21
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 2

   22 exp: "-" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 22
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 3

   25 exp: "if" . exp "then" exp "else" exp
   26    | "if" . exp "then" exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 23
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 4

   27 exp: "while" . exp "do" exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 24
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 5

   28 exp: "for" . id ":=" exp "to" exp "do" exp

    "identifier"  shift, and go to state 9

    id  转到状态 25


State 6

   30 exp: "let" . decs "in" explist "end"

    "function"  shift, and go to state 26
    "var"       shift, and go to state 27
    "type"      shift, and go to state 28

    $default  reduce using rule 38 (decs)

    decs    转到状态 29
    dec     转到状态 30
    tydec   转到状态 31
    vardec  转到状态 32
    fundec  转到状态 33


State 7

   29 exp: "break" .

    $default  reduce using rule 29 (exp)


State 8

    6 exp: "nil" .

    $default  reduce using rule 6 (exp)


State 9

   63 id: "identifier" .

    $default  reduce using rule 63 (id)


State 10

    9 exp: "string" .

    $default  reduce using rule 9 (exp)


State 11

    8 exp: "integer" .

    $default  reduce using rule 8 (exp)


State 12

    0 $accept: code . "end of file"

    "end of file"  shift, and go to state 34


State 13

    2 code: exp .
   10 exp: exp . "+" exp
   11    | exp . "-" exp
   12    | exp . "*" exp
   13    | exp . "/" exp
   14    | exp . "=" exp
   15    | exp . "<>" exp
   16    | exp . "<" exp
   17    | exp . "<=" exp
   18    | exp . ">" exp
   19    | exp . ">=" exp
   20    | exp . "&" exp
   21    | exp . "|" exp

    "+"   shift, and go to state 35
    "-"   shift, and go to state 36
    "*"   shift, and go to state 37
    "/"   shift, and go to state 38
    "="   shift, and go to state 39
    "<>"  shift, and go to state 40
    "<"   shift, and go to state 41
    "<="  shift, and go to state 42
    ">"   shift, and go to state 43
    ">="  shift, and go to state 44
    "&"   shift, and go to state 45
    "|"   shift, and go to state 46

    $default  reduce using rule 2 (code)


State 14

    7 exp: seq .

    $default  reduce using rule 7 (exp)


State 15

   23 exp: record .

    $default  reduce using rule 23 (exp)


State 16

   24 exp: array .

    $default  reduce using rule 24 (exp)


State 17

    3 exp: lvalue .
    5    | lvalue . ":=" exp
   57 lvalue: lvalue . "." id
   58       | lvalue . "[" exp "]"

    "["   shift, and go to state 47
    "."   shift, and go to state 48
    ":="  shift, and go to state 49

    $default  reduce using rule 3 (exp)


State 18

    4 exp: funcall .

    $default  reduce using rule 4 (exp)


State 19

   32 record: id . "{" refields "}"
   36 array: id . "[" exp "]" "of" exp
   56 lvalue: id .
   59 funcall: id . "(" args ")"

    "("  shift, and go to state 50
    "["  shift, and go to state 51
    "{"  shift, and go to state 52

    "["       [reduce using rule 56 (lvalue)]
    $default  reduce using rule 56 (lvalue)


State 20

   10 exp: exp . "+" exp
   11    | exp . "-" exp
   12    | exp . "*" exp
   13    | exp . "/" exp
   14    | exp . "=" exp
   15    | exp . "<>" exp
   16    | exp . "<" exp
   17    | exp . "<=" exp
   18    | exp . ">" exp
   19    | exp . ">=" exp
   20    | exp . "&" exp
   21    | exp . "|" exp
   53 explist: exp . ";" explist
   54        | exp .

    ";"   shift, and go to state 53
    "+"   shift, and go to state 35
    "-"   shift, and go to state 36
    "*"   shift, and go to state 37
    "/"   shift, and go to state 38
    "="   shift, and go to state 39
    "<>"  shift, and go to state 40
    "<"   shift, and go to state 41
    "<="  shift, and go to state 42
    ">"   shift, and go to state 43
    ">="  shift, and go to state 44
    "&"   shift, and go to state 45
    "|"   shift, and go to state 46

    $default  reduce using rule 54 (explist)


State 21

   31 seq: "(" explist . ")"

    ")"  shift, and go to state 54


State 22

   10 exp: exp . "+" exp
   11    | exp . "-" exp
   12    | exp . "*" exp
   13    | exp . "/" exp
   14    | exp . "=" exp
   15    | exp . "<>" exp
   16    | exp . "<" exp
   17    | exp . "<=" exp
   18    | exp . ">" exp
   19    | exp . ">=" exp
   20    | exp . "&" exp
   21    | exp . "|" exp
   22    | "-" exp .

    $default  reduce using rule 22 (exp)


State 23

   10 exp: exp . "+" exp
   11    | exp . "-" exp
   12    | exp . "*" exp
   13    | exp . "/" exp
   14    | exp . "=" exp
   15    | exp . "<>" exp
   16    | exp . "<" exp
   17    | exp . "<=" exp
   18    | exp . ">" exp
   19    | exp . ">=" exp
   20    | exp . "&" exp
   21    | exp . "|" exp
   25    | "if" exp . "then" exp "else" exp
   26    | "if" exp . "then" exp

    "+"     shift, and go to state 35
    "-"     shift, and go to state 36
    "*"     shift, and go to state 37
    "/"     shift, and go to state 38
    "="     shift, and go to state 39
    "<>"    shift, and go to state 40
    "<"     shift, and go to state 41
    "<="    shift, and go to state 42
    ">"     shift, and go to state 43
    ">="    shift, and go to state 44
    "&"     shift, and go to state 45
    "|"     shift, and go to state 46
    "then"  shift, and go to state 55


State 24

   10 exp: exp . "+" exp
   11    | exp . "-" exp
   12    | exp . "*" exp
   13    | exp . "/" exp
   14    | exp . "=" exp
   15    | exp . "<>" exp
   16    | exp . "<" exp
   17    | exp . "<=" exp
   18    | exp . ">" exp
   19    | exp . ">=" exp
   20    | exp . "&" exp
   21    | exp . "|" exp
   27    | "while" exp . "do" exp

    "+"   shift, and go to state 35
    "-"   shift, and go to state 36
    "*"   shift, and go to state 37
    "/"   shift, and go to state 38
    "="   shift, and go to state 39
    "<>"  shift, and go to state 40
    "<"   shift, and go to state 41
    "<="  shift, and go to state 42
    ">"   shift, and go to state 43
    ">="  shift, and go to state 44
    "&"   shift, and go to state 45
    "|"   shift, and go to state 46
    "do"  shift, and go to state 56


State 25

   28 exp: "for" id . ":=" exp "to" exp "do" exp

    ":="  shift, and go to state 57


State 26

   51 fundec: "function" . id "(" typefields ")" "=" exp
   52       | "function" . id "(" typefields ")" ":" id "=" exp

    "identifier"  shift, and go to state 9

    id  转到状态 58


State 27

   49 vardec: "var" . id ":=" exp
   50       | "var" . id ":" id ":=" exp

    "identifier"  shift, and go to state 9

    id  转到状态 59


State 28

   42 tydec: "type" . id "=" ty

    "identifier"  shift, and go to state 9

    id  转到状态 60


State 29

   30 exp: "let" decs . "in" explist "end"

    "in"  shift, and go to state 61


State 30

   37 decs: dec . decs

    "function"  shift, and go to state 26
    "var"       shift, and go to state 27
    "type"      shift, and go to state 28

    $default  reduce using rule 38 (decs)

    decs    转到状态 62
    dec     转到状态 30
    tydec   转到状态 31
    vardec  转到状态 32
    fundec  转到状态 33


State 31

   39 dec: tydec .

    $default  reduce using rule 39 (dec)


State 32

   40 dec: vardec .

    $default  reduce using rule 40 (dec)


State 33

   41 dec: fundec .

    $default  reduce using rule 41 (dec)


State 34

    0 $accept: code "end of file" .

    $default  接受


State 35

   10 exp: exp "+" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 63
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 36

   11 exp: exp "-" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 64
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 37

   12 exp: exp "*" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 65
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 38

   13 exp: exp "/" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 66
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 39

   14 exp: exp "=" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 67
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 40

   15 exp: exp "<>" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 68
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 41

   16 exp: exp "<" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 69
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 42

   17 exp: exp "<=" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 70
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 43

   18 exp: exp ">" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 71
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 44

   19 exp: exp ">=" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 72
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 45

   20 exp: exp "&" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 73
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 46

   21 exp: exp "|" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 74
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 47

   58 lvalue: lvalue "[" . exp "]"

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 75
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 48

   57 lvalue: lvalue "." . id

    "identifier"  shift, and go to state 9

    id  转到状态 76


State 49

    5 exp: lvalue ":=" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 77
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 50

   59 funcall: id "(" . args ")"

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    $default  reduce using rule 62 (args)

    exp      转到状态 78
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    args     转到状态 79
    id       转到状态 19


State 51

   36 array: id "[" . exp "]" "of" exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 80
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 52

   32 record: id "{" . refields "}"

    "identifier"  shift, and go to state 9

    $default  reduce using rule 35 (refields)

    refields  转到状态 81
    id        转到状态 82


State 53

   53 explist: exp ";" . explist

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    $default  reduce using rule 55 (explist)

    exp      转到状态 20
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    explist  转到状态 83
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 54

   31 seq: "(" explist ")" .

    $default  reduce using rule 31 (seq)


State 55

   25 exp: "if" exp "then" . exp "else" exp
   26    | "if" exp "then" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 84
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 56

   27 exp: "while" exp "do" . exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 85
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 57

   28 exp: "for" id ":=" . exp "to" exp "do" exp

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    exp      转到状态 86
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 58

   51 fundec: "function" id . "(" typefields ")" "=" exp
   52       | "function" id . "(" typefields ")" ":" id "=" exp

    "("  shift, and go to state 87


State 59

   49 vardec: "var" id . ":=" exp
   50       | "var" id . ":" id ":=" exp

    ":"   shift, and go to state 88
    ":="  shift, and go to state 89


State 60

   42 tydec: "type" id . "=" ty

    "="  shift, and go to state 90


State 61

   30 exp: "let" decs "in" . explist "end"

    "("           shift, and go to state 1
    "-"           shift, and go to state 2
    "if"          shift, and go to state 3
    "while"       shift, and go to state 4
    "for"         shift, and go to state 5
    "let"         shift, and go to state 6
    "break"       shift, and go to state 7
    "nil"         shift, and go to state 8
    "identifier"  shift, and go to state 9
    "string"      shift, and go to state 10
    "integer"     shift, and go to state 11

    $default  reduce using rule 55 (explist)

    exp      转到状态 20
    seq      转到状态 14
    record   转到状态 15
    array    转到状态 16
    explist  转到状态 91
    lvalue   转到状态 17
    funcall  转到状态 18
    id       转到状态 19


State 62

   37 decs: dec decs .

